Correções de erros em tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "moduleResolution": "node",
         "outDir": "app/dist/js",
         "target": "ES6",
         "noEmitOnError": true,
