--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "lite-server": "^2.6.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "undici-types": "^5.27.2"
   }
 }
